[gd_scene load_steps=15 format=3 uid="uid://2fkn4whglxhp"]

[ext_resource type="Script" path="res://components/player_stencil/sk2_player_eff.gd" id="1_8qkil"]
[ext_resource type="Texture2D" uid="uid://0k10vkv0ktjm" path="res://components/player_stencil/sprites/player_sk2_eff.png" id="2_0spaa"]
[ext_resource type="Texture2D" uid="uid://dh7r6chy5ogrv" path="res://components/player_stencil/sprites/sk2_explosion.png" id="3_80yxq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hrajl"]
atlas = ExtResource("2_0spaa")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_3felm"]
atlas = ExtResource("2_0spaa")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsjco"]
atlas = ExtResource("2_0spaa")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm8fu"]
atlas = ExtResource("2_0spaa")
region = Rect2(0, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_nec4m"]
atlas = ExtResource("2_0spaa")
region = Rect2(512, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3nny"]
atlas = ExtResource("2_0spaa")
region = Rect2(1024, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_i67yr"]
atlas = ExtResource("2_0spaa")
region = Rect2(512, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg475"]
atlas = ExtResource("2_0spaa")
region = Rect2(1024, 1024, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_vt0g0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrajl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3felm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsjco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm8fu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nec4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3nny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i67yr")
}],
"loop": false,
"name": &"effect",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_80yxq")
}],
"loop": true,
"name": &"explosion",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg475")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mjht6"]
radius = 39.12

[sub_resource type="CircleShape2D" id="CircleShape2D_6redd"]
radius = 0.0

[node name="Effect_sk2_body" type="CharacterBody2D"]
position = Vector2(69, 0)
motion_mode = 1
script = ExtResource("1_8qkil")

[node name="Skill2_area" type="Area2D" parent="."]

[node name="Effect" type="AnimatedSprite2D" parent="Skill2_area"]
scale = Vector2(0.20752, 0.20752)
sprite_frames = SubResource("SpriteFrames_vt0g0")
animation = &"idle"
autoplay = "idle"

[node name="Skill_collider" type="CollisionShape2D" parent="Skill2_area"]
shape = SubResource("CircleShape2D_mjht6")
debug_color = Color(0.368627, 0.478431, 1, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6redd")
disabled = true

[node name="Erase_time" type="Timer" parent="."]
wait_time = 1.189
one_shot = true

[connection signal="body_entered" from="Skill2_area" to="." method="_on_skill_2_area_body_entered"]
[connection signal="body_exited" from="Skill2_area" to="." method="_on_skill_2_area_body_exited"]
[connection signal="animation_finished" from="Skill2_area/Effect" to="." method="_on_effect_animation_finished"]
[connection signal="timeout" from="Erase_time" to="." method="_on_erase_time_timeout"]
